force-app/main/default/objects/Event_Registration__c/fields/Attendee_Company__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Company__c</fullName>
    <formula>IF(Contact__c != null, Contact__r.Account.Name, IF(Lead__c !=null, Lead__r.Company, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Company</label>
    <type>Text</type>
</CustomField>