force-app/main/default/objects/Event_Registration__c/fields/Attendee_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Mailing_Address__c</fullName>
    <formula>IF(Contact__c != null, Contact__r.MailingStreet, IF(Lead__c !=null, Lead__r.Street, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Mailing Address</label>
    <type>Text</type>
</CustomField>