force-app/main/default/objects/Event_Registration__c/fields/Attendee_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Mailing_City__c</fullName>
    <formula>IF(Contact__c != null, Contact__r.MailingCity, IF(Lead__c !=null, Lead__r.City, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Mailing City</label>
    <type>Text</type>
</CustomField>