force-app/main/default/objects/Event_Registration__c/fields/Attendee_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Mailing_Country__c</fullName>
    <formula>IF(Contact__c != null, Contact__r.MailingCountry, IF(Lead__c !=null, Lead__r.Country, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Mailing Country</label>
    <type>Text</type>
</CustomField>