force-app/main/default/objects/Event_Registration__c/fields/Attendee_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Mailing_State__c</fullName>
    <formula>IF(Contact__c != null, Contact__r.MailingState, IF(Lead__c !=null, Lead__r.State, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Mailing State</label>
    <type>Text</type>
</CustomField>