force-app/main/default/objects/Event_Registration__c/fields/Attendee_Mailing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Mailing_Zip_Code__c</fullName>
    <formula>IF(Contact__c != null, Contact__r.MailingPostalCode, IF(Lead__c !=null, Lead__r.PostalCode, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Mailing Zip Code</label>
    <type>Text</type>
</CustomField>