force-app/main/default/objects/Event_Registration__c/fields/Attendee_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Mobile_Phone__c</fullName>
    <formula>IF(Contact__c != null, Contact__r.MobilePhone, IF(Lead__c !=null, Lead__r.MobilePhone, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Mobile Phone</label>
    <type>Text</type>
</CustomField>