force-app/main/default/objects/Event_Registration__c/fields/Attendee_Office_Phone__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Office_Phone__c</fullName>
    <formula>IF(Contact__c != null, Contact__r.Phone, IF(Lead__c !=null, Lead__r.Phone, &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Office Phone</label>
    <type>Text</type>
</CustomField>