force-app/main/default/objects/Event_Registration__c/fields/Email_Confirmation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Confirmation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean to indicate that email confirmation has already been sent to the registered contact.</description>
    <inlineHelpText>Indicates that an email confirmation has already been sent to the contact</inlineHelpText>
    <label>Email Confirmation Sent?</label>
    <type>Checkbox</type>
</CustomField>