force-app/main/default/objects/Event_Registration__c/fields/Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Date__c</fullName>
    <description>Day reminder email to be sent</description>
    <formula>Event__r.Event_Start_Date__c -  Reminder_Email_Days__c</formula>
    <inlineHelpText>Day reminder email to be sent</inlineHelpText>
    <label>Reminder Date</label>
    <type>Date</type>
</CustomField>