force-app/main/default/objects/Event_Registration__c/fields/Reminder_Email_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Email_Days__c</fullName>
    <inlineHelpText>Number of days a reminder email should be sent prior to the event start date.</inlineHelpText>
    <label>Reminder Email Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>