force-app/main/default/objects/Event_Registration__c/validationRules/Registration_of_past_events.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_of_past_events</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),  DATEVALUE(Event__r.Event_End_Date__c)  &lt; TODAY())</errorConditionFormula>
    <errorMessage>You cannot register individuals for an event that has already ended.</errorMessage>
</ValidationRule>