force-app/main/default/objects/Event_Registration__c/validationRules/Reminder_Date_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Reminder_Date_In_Future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISNEW(),ISCHANGED( Reminder_Email_Days__c )),
 Reminder_Date__c &gt;  DATEVALUE(Event__r.Event_End_Date__c) )</errorConditionFormula>
    <errorDisplayField>Reminder_Email_Days__c</errorDisplayField>
    <errorMessage>Reminder date cannot exceed the event&apos;s end date.</errorMessage>
</ValidationRule>