force-app/main/default/objects/Event_Registration__c/validationRules/Reminder_Date_In_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Reminder_Date_In_Past</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(ISNEW(), ISCHANGED( Reminder_Email_Days__c )),  
    Reminder_Date__c &lt; TODAY()
)</errorConditionFormula>
    <errorDisplayField>Reminder_Email_Days__c</errorDisplayField>
    <errorMessage>Reminder date cannot be in the past.</errorMessage>
</ValidationRule>